syntax = "proto3";

option go_package = "github.com/nu1lspaxe/go-0x001/server/proto;proto";

service Digimon {
    rpc Create (CreateRequest) returns (CreateResponse) {}
    rpc Query (QueryRequest) returns (QueryResponse) {}
    rpc Foster (FosterRequest) returns (FosterResponse) {}
}

message CreateRequest {
    string name = 1;
}
  
message QueryRequest {
    string id = 1;
}

message FosterRequest {
    message Food {
      string name = 1;
    }
  
    string id = 1;
    Food food = 2;
}

message CreateResponse {
    string id = 1;
    string name = 2;
    string status = 3;
}

message QueryResponse {
    string id = 1;
    string name = 2;
    string status = 3;
}
  
message FosterResponse {
}